--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -75,7 +75,7 @@ i) En este ciclo se recorren todos los elementos de la reunión, o sea cada habl
 
 ii) Mientras que en este ciclo se recorre cada señal, a pesar de que sólo se recorren las posiciones impares igual nos termina costando $O(n)$, donde n es el tamaño de cada señal.
 
-Luego, la complejidad total nos queda $O(m \times n)$.
+Como el resto de las sólo son operaciones elementales la complejidad total nos queda $O(m \times n)$.
 
 \subsection{ordenar}
 asd
@@ -192,6 +192,6 @@ iii) Como vimos en la teórica, la complejidad del algoritmo bubbleSort es $O(n^
 
 Lo definido antes del primer ciclo son operaciones elementales que sólo cuestan $O(1)$, la declaración de la señal y el pushback también y por último las últimas 2 asignaciones también, por lo que no suman al total de la complejidad.
 
-Luego, la complejidad total es $O(m^2 \times n^2)$
+Luego, la complejidad total es $O(m^2 \times n^2)$.
 
 \end{document}
