--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -73,9 +73,9 @@ void acelerar(reunion& r, int prof, int freq) {
 \end{lstlisting}
 i) En este ciclo se recorren todos los elementos de la reunión, o sea cada hablante, llamando m a la longitud de la reunión nos termina costando $O(m)$.
 
-ii) Mientras que en este ciclo se recorre cada señal, a pesar de que sólo se recorren las posiciones impares igual nos termina costando $O(n)$, donde n es el tamaño de cada señal.
+ii) Mientras que en este ciclo se recorre cada señal, a pesar de que sólo se recorren las posiciones impares de la misma, igual nos termina costando $O(n)$, donde n es el tamaño de cada señal.
 
-Como el resto de las sólo son operaciones elementales la complejidad total nos queda $O(m \times n)$.
+Como el resto son sólo operaciones elementales y asignaciones de señales, la complejidad total nos queda $O(m \times n)$.
 
 \subsection{ordenar}
 asd
@@ -186,12 +186,12 @@ void filtradoMediana(senial& s, int R, int prof, int freq){
 
 i) En el peor caso en este ciclo se recorre la señal original entera por lo que su complejidad es $O(m)$ con m siendo el tamaño del vector original.
 
-ii) Mientras que en este ciclo pasa lo mismo excepto con el último elemento de la señal original, esto no cambia que su complejidad también sea $O(m)$.
+ii) En el peor caso, con R = 4, se recorren a lo sumo 9 posiciones (2*R+1), por lo que no suma al total de la complejidad.
 
-iii) Como vimos en la teórica, la complejidad del algoritmo bubbleSort es $O(n^2)$ donde n es la longitud de w y se aplica sobre todo w.
+iii) Como vimos en la teórica, la complejidad del algoritmo bubbleSort es $O(n^2)$ donde n es la longitud de w y se aplica sobre todo w, como el tamaño de w es a lo sumo 9, en el peor caso termina costando $O(9^2)$, por lo que tampoco suma al total de la complejidad.
 
 Lo definido antes del primer ciclo son operaciones elementales que sólo cuestan $O(1)$, la declaración de la señal y el pushback también y por último las últimas 2 asignaciones también, por lo que no suman al total de la complejidad.
 
-Luego, la complejidad total es $O(m^2 \times n^2)$.
+Luego, la complejidad total es $O(m)$.
 
 \end{document}
