--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -95,14 +95,14 @@ Cuento como operaciones elementales: \newline
 \begin{lstlisting}
 void ordenar(reunion& r, int freq, int prof) {
     for (int i = 1; i < r.size(); i++) {                       // 5, m-1 iteraciones
-        burbujeo(r, i);                                        // 2 + 49m - 49 + 22n*m - 22n = 49m - 47 + 22 n*m - 22n
+        burbujeoReuniones(r, i);                               // 2 + 49m - 49 + 22n*m - 22n = 49m - 47 + 22 n*m - 22n
     }                                                          // t(n,m) = 49m^2-96m + 22n*m^2 - 44n*m + 47 + 22n -> O(n*m^2)
 }
 
 void burbujeoReuniones (reunion &r, int i){
     for (int j=r.size()-1; j>i; j--){                          // 5, m-1 iteraciones
         if (tono(r[j].first) > tono(r[j-1].first)){            // 9 + 2 * (9+11n) = 27 + 22n
-            cambiar(r, j, j-1);                                // 14 + 3 = 17
+            swapReuniones(r, j, j-1);                          // 14 + 3 = 17
         }                                                      // t(n,m) = 5 + (5+17+27+22n) * (m-1) = 49m - 49 + 22n*m - 22n
     }                                                          // t(n,m) = 49m - 49 + 22n*m - 22n -> O(n*m)
 }
