--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -124,7 +124,7 @@ obteniendo asi, los indices de los intervalos de los silencios de cada hablante.
 Al inicio, se declara un vector de ceros de tamaño n, que almacenara los instantes donde un hablante no estuvo en
 silencio. \newline
 Con los indices a y b se moverán entre el final de un intervalo de silencios y el comienzo de el siguiente. Y en cada
-iteracion se escribira en el vector antes mencionado entre los indices a y b sin incluir, "unos", indicando de que un
+iteracion se escribira en el vector antes mencionado entre los indices a y b sin incluir, ``unos'', indicando de que un
 hablante habló en ese periodo. \newline
 Si en ningun momento se escribio un uno donde ya habia un uno, la funcion retornará falso, pues no se superponen. \newline
 
